--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -23,9 +23,11 @@
 
 .process {
   width: 25%;
+  height: 25%;
   color: white;
   border-radius: 16px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background: rgba(255,255,255,0.25);
