--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -108,3 +108,8 @@
 .mb-30 { margin-bottom: 30px !important; }
 .mb-40 { margin-bottom: 40px !important; }
 .mb-50 { margin-bottom: 50px !important; }
+
+.reveal img.serverless-logo {
+  max-width: 30%;
+  height: auto;
+}
